--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.notification.PaymentClearedActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.notification.DeliveryConfirmedActivity"
             android:exported="false" />
         <activity
