--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+systemProp.http.proxyHost=10.10.50.53
+systemProp.http.proxyPort=3128
+systemProp.https.proxyHost=10.10.50.53
+systemProp.https.proxyPort=3128
