--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".view.activity.order.PendingOrderActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.order.CartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.order.OrderActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activity.HomeActivity"
             android:exported="false" />
