--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         tools:targetApi="31">
         <activity
+            android:name=".view.activity.order.OrderDetailActivity"
+            android:exported="false" />
+        <activity
             android:name=".view.activity.order.PendingOrderActivity"
             android:exported="false" />
         <activity
