--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,20 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         tools:targetApi="31">
+        <activity
+            android:name=".view.activity.payment.PaymentDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.payment.PaymentListActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.payment.NewPaymentActivity"
+            android:exported="false" />
         <activity
             android:name=".view.activity.order.OrderDetailActivity"
             android:exported="false" />
