--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="ANDROID.PERMISSION.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -29,7 +29,10 @@
         android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
         tools:targetApi="31">
         <activity
-            android:name=".view.activity.payment.PaymentDetailActivity"
+            android:name=".view.activity.delivery.DeliveryDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".view.activity.delivery.DeliveryListActivity"
             android:exported="false" />
         <activity
             android:name=".view.activity.payment.PaymentListActivity"
