--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.akg.akg_sales"
         minSdk 23
         targetSdk 32
-        versionCode 3
-        versionName "2.0"
+        versionCode 5
+        versionName "2.2-test"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
