--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,9 @@ android {
         applicationId "com.akg.akg_sales"
         minSdk 23
         targetSdk 32
-        versionCode 8
-        versionName "2.5.0-test"
+        versionCode 9
+//        versionName "2.5.0-test"    // Test Release Version
+        versionName "1.0.0"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
