--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-core:21.1.1'
     implementation 'com.google.firebase:firebase-messaging:23.2.1'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
+
 }
 
