--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 17
-//        versionName "2.5.2-test"    // Test Release Version
-        versionName "1.0.6"    // Production Release Version
+        versionName "2.5.3-test"    // Test Release Version
+//        versionName "1.0.6"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
