--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 18
-        versionName "2.5.5-test"    // Test Release Version
-//        versionName "1.0.6"    // Production Release Version
+//        versionName "2.5.6-test"    // Test Release Version
+        versionName "1.0.7"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
