--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,9 @@ android {
         applicationId "com.akg.akg_sales"
         minSdk 23
         targetSdk 32
-        versionCode 18
-        versionName "2.5.6-test"    // Test Release Version
-//        versionName "1.0.7"    // Production Release Version
+        versionCode 19
+//        versionName "2.5.6-test"    // Test Release Version
+        versionName "1.0.8"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
