--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         minSdk 23
         targetSdk 32
         versionCode 21
-//        versionName "2.5.10-test"    // Test Release Version
-        versionName "1.0.10"    // Production Release Version
+        versionName "2.5.10-test"    // Test Release Version
+//        versionName "1.0.10"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
