--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,9 +11,9 @@ android {
         applicationId "com.akg.akg_sales"
         minSdk 23
         targetSdk 33
-        versionCode 21
-        versionName "2.5.12-test"    // Test Release Version
-//        versionName "1.0.10"    // Production Release Version
+        versionCode 22
+//        versionName "2.5.12-test"    // Test Release Version
+        versionName "1.0.11"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
