--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         minSdk 23
         targetSdk 33
         versionCode 22
-//        versionName "2.5.12-test"    // Test Release Version
-        versionName "1.0.11"    // Production Release Version
+        versionName "2.5.13-test"    // Test Release Version
+//        versionName "1.0.11"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'androidx.browser:browser:1.8.0'
 
 }
 
