- Project SDK and Gradle SDK upgraded to 8.5.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ systemProp.http.proxyHost=10.10.50.53
 systemProp.http.proxyPort=3128
 systemProp.https.proxyHost=10.10.50.53
 systemProp.https.proxyPort=3128
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
