--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         minSdk 23
         targetSdk 33
         versionCode 23
-        versionName "2.5.13-test"    // Test Release Version
-//        versionName "1.0.12"    // Production Release Version
+//        versionName "2.5.13-test"    // Test Release Version
+        versionName "1.0.12"    // Production Release Version
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
